tests/errors/missing_include_01.f90
program p
  implicit none
  include 'does_not_exist.fi'
  print *, "hello"
end program p
